testsuite/tests/semantic_errors/no_matching_overload_nested_call/test.out
Analyzing test.adb
##################

Resolving xrefs for node <CallStmt test.adb:7:4-7:20>
*****************************************************

Name resolution failed as expected with:

test.adb:7:9: error: no matching alternative (of 2 candidates)
7 |    Bar (Foo (2.5));
  |         ^^^

test.adb:3:22: info: expected Boolean, got universal real
3 |    function Foo (X : Boolean) return Boolean is (X);
  |                      ^^^^^^^

test.adb:2:22: info: expected Integer, got universal real
2 |    function Foo (X : Integer) return Integer is (X);
  |                      ^^^^^^^


Resolving xrefs for node <PragmaNode test.adb:21:10-21:47>
**********************************************************

Name resolution failed as expected with:

test.adb:21:25: error: no matching alternative (showing 3 out of 4 candidates)
21 |          pragma Assert (P."=" (P.T'First, 0));
   |                         ^^^^^

in Standard: info: expected root_real, got T [instance at line 19]

in Standard: info: expected root_real, got universal integer

in Standard: info: expected root_integer, got T [instance at line 19]



Done.
